--- a/A Simple Vietnamese CV/pubs.bib
+++ b/A Simple Vietnamese CV/pubs.bib
@@ -1,1 +1,33 @@
-@comment{Thêm các bài báo của bạn ở đây}
+@article{Hoang2020,
+    author      = {Duc A. Hoang}, 
+    title       = {The title of the work},
+    journal     = {The name of the journal},
+    year        = {2020},
+    number      = {2},
+    pages       = {201-213},
+    note        = {An optional note}, 
+    volume      = {2}
+}
+
+@inproceedings{Hoang2019,
+    author      = {Duc A. Hoang}, 
+    title       = {The title of the work},
+    booktitle   = {Proceedings of A Very Important Conference},
+    year        = {2019},
+    series      = {LNCS},
+    volume      = {0000},
+    pages       = {201-213},
+    addendum    = {An optional note}
+}
+
+@inproceedings{Hoang2019-2,
+    author      = {Duc A. Hoang}, 
+    title       = {The title of the works},
+    booktitle   = {Proceedings of A Very Important Conference},
+    year        = {2019},
+    series      = {LNCS},
+    volume      = {0000},
+    pages       = {214-220},
+    addendum    = {Ghi chú về bài báo},
+    doi         = {10222.343535}
+}
