--- a/kakenhiLaTeX/2021_fall/chousenteki_houga_abst_utf_multi/pieces/inst_chousenteki_houga_abst.tex
+++ b/kakenhiLaTeX/2021_fall/chousenteki_houga_abst_utf_multi/pieces/inst_chousenteki_houga_abst.tex
@@ -4,16 +4,9 @@
 	\KLInstLine{}
 	\KLInstructionTitle
 	\KLInstLine{1}
-　　1.　本研究種目は、これまでの学術の体系や方向を大きく変革・転換させる潜在性を有する挑戦\\
-　　　　的研究を募集するものです（（萌芽）については、探索的性質の強い、あるいは芽生え期の\\
-　　　　研究計画も対象としています）。応募に当たっては自身の研究計画がその趣旨に沿ったもの\\
-　　　　であるかを十分に確認すること。\\
-　　２．挑戦的研究（萌芽）は審査区分表の中区分により、広い分野の委員構成で多角的視点から審\\
-　　　　査が行われることに留意の上、研究計画調書を作成すること。\\
-　　３．挑戦的研究（萌芽）では、本様式（「研究計画調書の概要」欄）に研究計画調書（Web入力\\
-　　　　項目）の前半部分を加えた「研究計画調書（概要版）」のみによる事前の選考を行います\\
-　　　　（応募件数が少ない場合、事前の選考は行いません）。本様式は書面審査では参照でき\\
-　　　　ないため注意すること。\\
+　　1. This research category calls for a challenging research with the potential of radically transforming the existing research framework and/or changing the research direction. (The scope of the (Exploratory) category encompasses research proposals that are highly exploratory and/or are in their budding stages.) Make sure that your research plan is consistent with the purpose of the research category.\\
+　　2. Proposals submitted to the research category Challenging Research (Exploratory) will be reviewed in the pertaining Medium-sized Section of the Review Section Table. The proposal document should be prepared with consideration that it will be reviewed from diverse viewpoints by a review committee consisting of reviewers with different backgrounds.\\
+　　3. In the research category Challenging Research (Exploratory), the preliminary screening will be conducted only by the ``Research Proposal Document (Outline)'' which is made up by adding the first half of the Research Proposal Document (items to be entered in the Website) to the form (``Outline of Research Proposal Document'' column) (Preliminary screening will not be conducted if the number of application is small). Take note that this form is unable to be referred at the document review.\\
 
 	\KLInstLine{2}
 	\GeneralInstructions{}{}{}
