--- a/kakenhiLaTeX/2021_fall/chousenteki_houga_utf_multi/chousenteki_houga_01_purpose_plan_competence.tex
+++ b/kakenhiLaTeX/2021_fall/chousenteki_houga_utf_multi/chousenteki_houga_01_purpose_plan_competence.tex
@@ -8,14 +8,14 @@
 %begin 挑戦的研究の目的及び方法と応募者の研究遂行能力 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 \JSPSInstructions	% <-- 留意事項。これは消すか、コメントアウトしてください。
 
-	 象の卵の研究目的は．．．
-
-	象の卵の研究計画は．．．
-
-	\vspace{1cm}
-	\begin{thebibliography}{99}
-		\bibitem{teramura} 寺村輝夫、「ぼくは王様 - ぞうのたまごのたまごやき」.
-	\end{thebibliography}
+%	 象の卵の研究目的は．．．
+%
+%	象の卵の研究計画は．．．
+%
+%	\vspace{1cm}
+%	\begin{thebibliography}{99}
+%		\bibitem{teramura} 寺村輝夫、「ぼくは王様 - ぞうのたまごのたまごやき」.
+%	\end{thebibliography}
 %end 挑戦的研究の目的及び方法と応募者の研究遂行能力 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 \input{pieces/p01_purpose_plan_competence_01}
 
