--- a/kakenhiLaTeX/2021_fall/chousenteki_houga_utf_multi/chousenteki_houga_02_importance.tex
+++ b/kakenhiLaTeX/2021_fall/chousenteki_houga_utf_multi/chousenteki_houga_02_importance.tex
@@ -6,12 +6,12 @@
 
 %s04_importance_chousenteki.tex
 %begin 挑戦的研究としての意義 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
-		風呂で巨大な温泉卵について考えていて、ふと思いついた。
-
-	この発見により、哺乳類は卵を産まないという学術の世界の
-	「常識の殻」を文字通り打ち破ることができる。
-	また、他分野の研究の場においても、古くからの「常識の殻」を
-	打ち砕くきっかけとなり、科学全体が大きく前進するきっかけとなる。
+%		風呂で巨大な温泉卵について考えていて、ふと思いついた。
+%
+%	この発見により、哺乳類は卵を産まないという学術の世界の
+%	「常識の殻」を文字通り打ち破ることができる。
+%	また、他分野の研究の場においても、古くからの「常識の殻」を
+%	打ち砕くきっかけとなり、科学全体が大きく前進するきっかけとなる。
 %end 挑戦的研究としての意義 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 
 \input{pieces/p02_importance_01}
