--- a/kakenhiLaTeX/2021_fall/chousenteki_houga_utf_multi/chousenteki_houga_03_rights.tex
+++ b/kakenhiLaTeX/2021_fall/chousenteki_houga_utf_multi/chousenteki_houga_03_rights.tex
@@ -6,9 +6,9 @@
 
 % s09_rights
 %begin 人権の保護及び法令等の遵守への対応 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
-	象の卵のES細胞の培養、象のクローンの生成などは行わない。
-
-	\LaTeX の便利な機能については、\texttt{egg\_***.tex} や\texttt{sample\_pdf/egg\_***.pdf}をご覧ください。
+%	象の卵のES細胞の培養、象のクローンの生成などは行わない。
+%
+%	\LaTeX の便利な機能については、\texttt{egg\_***.tex} や\texttt{sample\_pdf/egg\_***.pdf}をご覧ください。
 %end 人権の保護及び法令等の遵守への対応 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 
 \input{pieces/p03_rights_01}
