--- a/kakenhiLaTeX/2021_fall/chousenteki_houga_utf_multi/pieces/form04_chousenteki_houga_header.tex
+++ b/kakenhiLaTeX/2021_fall/chousenteki_houga_utf_multi/pieces/form04_chousenteki_houga_header.tex
@@ -2,8 +2,8 @@
 
 % ===== Global definitions for the Kakenhi form ======================
 %　基本情報
-\newcommand{\様式}{様式S−４２−２}
-\newcommand{\研究種目}{挑戦的研究（萌芽）}
+\newcommand{\様式}{Form S-42-2:}
+\newcommand{\研究種目}{Challenging Research (Exploratory)}
 \newcommand{\研究種目後半}{}
 \ifthenelse{\isundefined{\研究種別}}{
 	\newcommand{\研究種別}{}
