--- a/kakenhiLaTeX/2021_fall/chousenteki_houga_utf_single/chousenteki_houga.tex
+++ b/kakenhiLaTeX/2021_fall/chousenteki_houga_utf_single/chousenteki_houga.tex
@@ -1,5 +1,7 @@
 %\documentclass[11pt,a4paper,uplatex,dvipdfmx]{ujarticle} 		% for uplatex
-\documentclass[11pt,a4j,dvipdfmx]{jarticle} 					% for platex
+\documentclass[10pt,a4j,dvipdfmx]{jarticle} 					% for platex
+\usepackage{newtxtext,newtxmath} % Times New Roman
+\renewcommand\refname{\textbf{References}}
 \input{pieces/form00_header} % pieces
 \input{pieces/kakenhi7} % pieces
 \input{pieces/form01_header} % pieces
@@ -74,14 +76,14 @@
 %begin 挑戦的研究の目的及び方法と応募者の研究遂行能力 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 \JSPSInstructions	% <-- 留意事項。これは消すか、コメントアウトしてください。
 
-	 象の卵の研究目的は．．．
-
-	象の卵の研究計画は．．．
-
-	\vspace{1cm}
-	\begin{thebibliography}{99}
-		\bibitem{teramura} 寺村輝夫、「ぼくは王様 - ぞうのたまごのたまごやき」.
-	\end{thebibliography}
+%	 象の卵の研究目的は．．．
+%
+%	象の卵の研究計画は．．．
+%
+%	\vspace{1cm}
+%	\begin{thebibliography}{99}
+%		\bibitem{teramura} 寺村輝夫、「ぼくは王様 - ぞうのたまごのたまごやき」.
+%	\end{thebibliography}
 %end 挑戦的研究の目的及び方法と応募者の研究遂行能力 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 \input{pieces/p01_purpose_plan_competence_01}
 
@@ -93,12 +95,12 @@
 
 %s04_importance_chousenteki.tex
 %begin 挑戦的研究としての意義 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
-		風呂で巨大な温泉卵について考えていて、ふと思いついた。
-
-	この発見により、哺乳類は卵を産まないという学術の世界の
-	「常識の殻」を文字通り打ち破ることができる。
-	また、他分野の研究の場においても、古くからの「常識の殻」を
-	打ち砕くきっかけとなり、科学全体が大きく前進するきっかけとなる。
+%		風呂で巨大な温泉卵について考えていて、ふと思いついた。
+%
+%	この発見により、哺乳類は卵を産まないという学術の世界の
+%	「常識の殻」を文字通り打ち破ることができる。
+%	また、他分野の研究の場においても、古くからの「常識の殻」を
+%	打ち砕くきっかけとなり、科学全体が大きく前進するきっかけとなる。
 %end 挑戦的研究としての意義 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 
 \input{pieces/p02_importance_01}
@@ -111,9 +113,9 @@
 
 % s09_rights
 %begin 人権の保護及び法令等の遵守への対応 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
-	象の卵のES細胞の培養、象のクローンの生成などは行わない。
-
-	\LaTeX の便利な機能については、\texttt{egg\_***.tex} や\texttt{sample\_pdf/egg\_***.pdf}をご覧ください。
+%	象の卵のES細胞の培養、象のクローンの生成などは行わない。
+%
+%	\LaTeX の便利な機能については、\texttt{egg\_***.tex} や\texttt{sample\_pdf/egg\_***.pdf}をご覧ください。
 %end 人権の保護及び法令等の遵守への対応 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 
 \input{pieces/p03_rights_01}
