--- a/kakenhiLaTeX/2021_fall/chousenteki_houga_abst_utf_multi/pieces/form04_chousenteki_houga_abst_header.tex
+++ b/kakenhiLaTeX/2021_fall/chousenteki_houga_abst_utf_multi/pieces/form04_chousenteki_houga_abst_header.tex
@@ -2,8 +2,8 @@
 
 % ===== Global definitions for the Kakenhi form ======================
 %　基本情報
-\newcommand{\様式}{様式S−４２−１}
-\newcommand{\研究種目}{挑戦的研究（萌芽）}
+\newcommand{\様式}{Form S-42-1:}
+\newcommand{\研究種目}{Challenging Research (Exploratory)}
 \newcommand{\研究種目後半}{}
 \ifthenelse{\isundefined{\研究種別}}{
 	\newcommand{\研究種別}{}
@@ -16,14 +16,14 @@
 %====== Headers ====================================================
 \fancypagestyle{chousenteki-abs-p1-header}{%
 	\fancyhf{}
-	\fancyhead[L]{\hspace{-37pt}\headerfont\様式\ 研究計画調書（添付ファイル項目）\\
+	\fancyhead[L]{\hspace{-37pt}\headerfont\様式\ Research Proposal Document (forms to be uploaded)\\
 				\rule{0pt}{0pt}\\}
-	\fancyhead[R]{\headerfont\textbf{\研究種目 概要\ \thepage\\}}
+	\fancyhead[R]{\headerfont\textbf{\研究種目 (Outline)\ \thepage\\}}
 }
 
 \fancypagestyle{chousenteki-abs-default-header}{%
 	\fancyhf{}
-	\fancyhead[L]{\headerfont\textbf{【研究計画調書の概要（つづき）\ 】}}
-	\fancyhead[R]{\headerfont\textbf{\研究種目 概要\ \thepage\\}}
+	\fancyhead[L]{\headerfont\textbf{[Outline of Research Proposal Document (continued from the previous page)]}}
+	\fancyhead[R]{\headerfont\textbf{\研究種目 (Outline)\ \thepage\\}}
 }
 
