--- a/kakenhiLaTeX/2021_fall/chousenteki_houga_abst_utf_single/chousenteki_houga_abst.tex
+++ b/kakenhiLaTeX/2021_fall/chousenteki_houga_abst_utf_single/chousenteki_houga_abst.tex
@@ -1,5 +1,6 @@
 %\documentclass[11pt,a4paper,uplatex,dvipdfmx]{ujarticle} 		% for uplatex
-\documentclass[11pt,a4j,dvipdfmx]{jarticle} 					% for platex
+\documentclass[10pt,a4j,dvipdfmx]{jarticle} 					% for platex
+\usepackage{newtxtext,newtxmath} % Times New Roman
 \input{pieces/form00_header} % pieces
 \input{pieces/kakenhi7} % pieces
 \input{pieces/form01_header} % pieces
@@ -74,19 +75,19 @@
 %begin 挑戦的研究の概要 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 \JSPSInstructions	% <-- 留意事項。これは消すか、コメントアウトしてください。
 
-\textbf{\\　　　　　＊＊＊　以下は、あくまで例です。真似しないでください。　＊＊＊\\
-　　　　　＊＊＊　本文はもちろん、節の切り方や論理の組み方は　　　＊＊＊\\
-　　　　　＊＊＊　ご自分の気に入ったスタイルで書いてください。　　＊＊＊}
-
-	象の卵の研究の目的は．．．	
-
-	象の卵の研究方法は．．．	
-
-	応募者の研究遂行能力は．．．（あると思う）
-
-	象の卵の発見は旧態依然とした哺乳類の定義に対して極めて挑戦的な意義を持つ。
-
-	\input{blahblah}
+%\textbf{\\　　　　　＊＊＊　以下は、あくまで例です。真似しないでください。　＊＊＊\\
+%　　　　　＊＊＊　本文はもちろん、節の切り方や論理の組み方は　　　＊＊＊\\
+%　　　　　＊＊＊　ご自分の気に入ったスタイルで書いてください。　　＊＊＊}
+%
+%	象の卵の研究の目的は．．．	
+%
+%	象の卵の研究方法は．．．	
+%
+%	応募者の研究遂行能力は．．．（あると思う）
+%
+%	象の卵の発見は旧態依然とした哺乳類の定義に対して極めて挑戦的な意義を持つ。
+%
+%	\input{blahblah}
 %end 挑戦的研究の概要 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 
 \input{pieces/p00_abstract_01}
