--- a/kakenhiLaTeX/2021_fall/chousenteki_houga_abst_utf_single/pieces/p00_abstract_00.tex
+++ b/kakenhiLaTeX/2021_fall/chousenteki_houga_abst_utf_single/pieces/p00_abstract_00.tex
@@ -1,2 +1,2 @@
 % p00_abstract_00.tex
-\KLBeginSubject{01}{1}{研究計画調書の概要}{2}{F}{}{jsps-abs-p1-header}{jsps-abs-default-header}
+\KLBeginSubject{01}{1}{Outline of Research Proposal Document}{2}{F}{}{jsps-abs-p1-header}{jsps-abs-default-header}
