--- a/kakenhiLaTeX/2021_fall/chousenteki_houga_utf_single/pieces/p01_purpose_plan_competence_00.tex
+++ b/kakenhiLaTeX/2021_fall/chousenteki_houga_utf_single/pieces/p01_purpose_plan_competence_00.tex
@@ -1,2 +1,2 @@
 % p01_purpose_plan_competence_00.tex
-\KLBeginSubject{01}{1}{１　研究目的及び研究方法、応募者の研究遂行能力}{2}{F}{}{jsps-p1-header}{jsps-default-header}
+\KLBeginSubject{01}{1}{\resizebox{0.67\textwidth}{!}{1. Research Objectives and Research Method, Applicant's Ability to Conduct the Research}}{2}{F}{}{jsps-p1-header}{jsps-default-header}
