--- a/kakenhiLaTeX/2021_fall/chousenteki_houga_utf_single/pieces/p03_rights_00.tex
+++ b/kakenhiLaTeX/2021_fall/chousenteki_houga_utf_single/pieces/p03_rights_00.tex
@@ -1,2 +1,2 @@
 % p03_rights_00.tex
-\KLBeginSubject{03}{3}{３　人権の保護及び法令等の遵守への対応}{1}{F}{}{jsps-subject-header}{jsps-default-header}
+\KLBeginSubject{03}{3}{3. Issues Relevant to Human Right Protection and Legal Compliance}{1}{F}{}{jsps-subject-header}{jsps-default-header}
