--- a/kakenhiLaTeX/2021_fall/kiban_c_utf_multi/kiban_c_03_abilities.tex
+++ b/kakenhiLaTeX/2021_fall/kiban_c_utf_multi/kiban_c_03_abilities.tex
@@ -1,44 +1,45 @@
 %#Split: 03_abilities  
 %#PieceName: p03_abilities
 \input{pieces/p03_abilities_00}
-\section{２　応募者の研究遂行能力及び研究環境}
+%\section{２　応募者の研究遂行能力及び研究環境}
+\section{2. Applicant's Ability to Conduct the Research and the Research Environment}
 %　　　　＜＜最大　2ページ＞＞
 
 % s14_abilities
 %begin 応募者の研究遂行能力及び研究環境 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 \PapersInstructions	% <-- 研究業績留意事項。これは消すか、コメントアウトしてください。
 
-	応募者は過去20年間、７つの海を隅から隅まで航海し、
-	浅瀬から深海まで潜り、文字通り東西南北上下の３次元で
-	シロナガスクジラの卵の探索を行ってきた(業績\ref{pub:whale})。
-	シロナガスクジラに飲み込まれそうになったり、海賊に捕まるなどの危険な目にも
-	あったが、それにもめげず、研究を遂行してきた強靭な能力を有する。
+%	応募者は過去20年間、７つの海を隅から隅まで航海し、
+%	浅瀬から深海まで潜り、文字通り東西南北上下の３次元で
+%	シロナガスクジラの卵の探索を行ってきた(業績\ref{pub:whale})。
+%	シロナガスクジラに飲み込まれそうになったり、海賊に捕まるなどの危険な目にも
+%	あったが、それにもめげず、研究を遂行してきた強靭な能力を有する。
 
-	シロナガスクジラの卵を探すために用いていたソナーと双眼鏡、及び
-	シロナガスクジラの卵を引き上げるために用意していた大きな網は、
-	そのまま使える。
+%	シロナガスクジラの卵を探すために用いていたソナーと双眼鏡、及び
+%	シロナガスクジラの卵を引き上げるために用意していた大きな網は、
+%	そのまま使える。
 %end 応募者の研究遂行能力及び研究環境 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 %begin 研究業績リスト ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
-	\begin{enumerate}
-		\paper{Search for whale eggs}{\yukawa\ \etal}{Rev.\ Oceanic Mysteries}{888}{99}{2017}
-			\label{pub:whale}
-				
-		\paper{Theory of Elephant Eggs}{\yukawa, Kara Juzo \etal}{\prl}{800}{800-804}{2005}
-			\label{pub:theoegg}
-				
-		\paper{仔象は死んだ}{Kobo Abe}{安部公房全集}{26}{100-200}{2004}
-		
-		\paper{The Elephant's Child (象の鼻はなぜ長い)}{R.~Kipling}{Nature}{999}{777-799}{2003}
+%	\begin{enumerate}
+%		\paper{Search for whale eggs}{\yukawa\ \etal}{Rev.\ Oceanic Mysteries}{888}{99}{2017}
+%			\label{pub:whale}
+%				
+%		\paper{Theory of Elephant Eggs}{\yukawa, Kara Juzo \etal}{\prl}{800}{800-804}{2005}
+%			\label{pub:theoegg}
+%				
+%		\paper{仔象は死んだ}{Kobo Abe}{安部公房全集}{26}{100-200}{2004}
+%		
+%		\paper{The Elephant's Child (象の鼻はなぜ長い)}{R.~Kipling}{Nature}{999}{777-799}{2003}
 
-		\paper{You can't Lay an Egg If You're an Elephant}{F.~Ehrlich}
-			{JofUR\\({\tt www.universalrejection.org})}{{\bf N/A}}{2002}
-		
-		% 下のように書いてもいいけど、めんどくさいし、表示の仕方を変えようとしたら大変。
-		\item ``Egg of Elephant-Bird'', 
-				\underline{A.~Cooper},
-				Nature, {\bf 409}, 704-707 (2001).	% 	
-		\input{jack_pub}	% << only for demonstration. Please delete it or comment it out.
-	\end{enumerate}
+%		\paper{You can't Lay an Egg If You're an Elephant}{F.~Ehrlich}
+%			{JofUR\\({\tt www.universalrejection.org})}{{\bf N/A}}{2002}
+%		
+%		% 下のように書いてもいいけど、めんどくさいし、表示の仕方を変えようとしたら大変。
+%		\item ``Egg of Elephant-Bird'', 
+%				\underline{A.~Cooper},
+%				Nature, {\bf 409}, 704-707 (2001).	% 	
+%		\input{jack_pub}	% << only for demonstration. Please delete it or comment it out.
+%	\end{enumerate}
 %end 研究業績リスト ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 
 \input{pieces/p03_abilities_01}
