--- a/kakenhiLaTeX/2021_fall/kiban_c_utf_single/pieces/form04_kiban_c_header.tex
+++ b/kakenhiLaTeX/2021_fall/kiban_c_utf_single/pieces/form04_kiban_c_header.tex
@@ -2,10 +2,10 @@
 
 % ===== Global definitions for the Kakenhi form ======================
 %　基本情報
-\newcommand{\様式}{様式S−１４}
-\newcommand{\研究種目}{基盤研究}
-\newcommand{\研究種目後半}{（一般）}
-\newcommand{\研究種別}{（Ｃ）}
+\newcommand{\様式}{Form S-14:}
+\newcommand{\研究種目}{Scientific Research}
+\newcommand{\研究種目後半}{ (General) }
+\newcommand{\研究種別}{ (C) }
 \newcommand{\研究種目header}{\研究種目\研究種別\研究種目後半}
 
 \newcommand{\KLMainFile}{kiban\_c.tex}
