--- a/kakenhiLaTeX/2021_fall/kiban_c_utf_single/pieces/p05_final_year_00.tex
+++ b/kakenhiLaTeX/2021_fall/kiban_c_utf_single/pieces/p05_final_year_00.tex
@@ -1,2 +1,3 @@
 % p05_final_year_00.tex
-\KLBeginSubject{04}{4}{４　研究計画最終年度前年度応募を行う場合の記述事項}{1}{F}{}{jsps-subject-header}{jsps-default-header}
+\KLBeginSubject{04}{4}{4. Items to be Entered When New Application is Made in the Fiscal Year Previous to the
+Final Year of the Research Period of an On-Going KAKENHI Project}{1}{F}{}{jsps-subject-header}{jsps-default-header}
