--- a/kakenhiLaTeX/2021_fall/kiban_s_utf_multi/kiban_s_02_rights.tex
+++ b/kakenhiLaTeX/2021_fall/kiban_s_utf_multi/kiban_s_02_rights.tex
@@ -1,15 +1,15 @@
 %#Split: 02_rights  
 %#PieceName: p02_rights
 \input{pieces/p02_rights_00}
-\section{２　人権の保護及び法令等の遵守への対応}
+%\section{２　人権の保護及び法令等の遵守への対応}
+\section{2. Issues Relevant to Human Right Protection and Legal Compliance}
 %　　　　＜＜最大　1ページ＞＞
 
 % s09_rights
 %begin 人権の保護及び法令等の遵守への対応 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
-	象の卵のES細胞の培養、象のクローンの生成などは行わない。
-
-	\LaTeX の便利な機能については、\texttt{egg\_***.tex} や\texttt{sample\_pdf/egg\_***.pdf}をご覧ください。
+%	象の卵のES細胞の培養、象のクローンの生成などは行わない。
+%
+%	\LaTeX の便利な機能については、\texttt{egg\_***.tex} や\texttt{sample\_pdf/egg\_***.pdf}をご覧ください。
 %end 人権の保護及び法令等の遵守への対応 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 
 \input{pieces/p02_rights_01}
-
