--- a/kakenhiLaTeX/2021_fall/kiban_s_utf_multi/pieces/p03_final_year_01.tex
+++ b/kakenhiLaTeX/2021_fall/kiban_s_utf_multi/pieces/p03_final_year_01.tex
@@ -3,10 +3,14 @@
 \hspace{-8pt}
 \begin{tabular}{|p{118pt}|p{44pt}|p{208pt}|p{46pt}|}
 	\hline
-	\KLTabC{\textbf{研究種目名}} & 
-	\KLTabC{\textbf{課題番号}} & 
-	\KLTabC{\textbf{研究課題名}} & 
-	\KLTabC{\textbf{研究期間}}\\
+%	\KLTabC{\textbf{研究種目名}} & 
+%	\KLTabC{\textbf{課題番号}} & 
+%	\KLTabC{\textbf{研究課題名}} & 
+%	\KLTabC{\textbf{研究期間}}\\
+	\KLTabC{\textbf{Research Category}} & 
+	\KLTabC{\textbf{Project Number}} & 
+	\KLTabC{\textbf{Title of the Research Project}} & 
+	\KLTabC{\textbf{Research Period}}\\
 	\hline
 	\最終年度研究種目名 &
 	\最終年度研究課題番号 &
