--- a/kakenhiLaTeX/2021_fall/kiban_s_utf_single/buntansha_info.tex
+++ b/kakenhiLaTeX/2021_fall/kiban_s_utf_single/buntansha_info.tex
@@ -13,45 +13,48 @@
 \renewcommand{\研究者生年月日の月}{4}
 \renewcommand{\研究者生年月日の日}{31}
 \renewcommand{\研究者年齢}{137}
-\renewcommand{\研究者所属機関部局職}{\small{江戸文理大学・理学部・名誉教授}}	% use \tiny if necessary
+\renewcommand{\研究者所属機関部局職}{\small{江戸文理大学\\ 理学部\\ 名誉教授}}	% use \tiny if necessary
 \renewcommand{\研究者学位}{理学博士}
 % end 研究者情報　＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 
 \input{pieces/s14_pub_S_picture_b} % pieces
 
+\vspace*{-1cm}
 %begin 基盤S研究分担者の研究遂行能力及び研究環境 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 	\noindent
-	\textbf{（１）研究分担者のこれまでの研究活動}\\
+%	\textbf{（１）研究分担者のこれまでの研究活動}\\
+	\textbf{(1) Co-I's hitherto research activities}\\
 \PapersInstructions	% <-- 研究業績留意事項。これは消すか、コメントアウトしてください。
 
-	私は毎晩超新星を探索するために
-	目を皿のようにして望遠鏡をのぞき、
-	前夜の写真と新しい写真をそれぞれ別の目で見てきた。
-	そのために目の大きさと立体視能力では誰にも引けを取らない。
-\\
+%	私は毎晩超新星を探索するために
+%	目を皿のようにして望遠鏡をのぞき、
+%	前夜の写真と新しい写真をそれぞれ別の目で見てきた。
+%	そのために目の大きさと立体視能力では誰にも引けを取らない。
+%\\
 
 	\noindent
-	\textbf{（２）研究分担者の研究環境}\\
-	天体観測用の広視野の望遠鏡はあるので、それを携えて地球周回軌道に行けば、
-	象の卵の探索はできる。
-	また、季節によらず約45分観測しては約45分寝られるので、
-	実質ほぼ24時間体制で探索を続けられる。
-	ただし、暗いと目が覚め、明るいと眠くなる長年の習慣を直す必要はある。
+%	\textbf{（２）研究分担者の研究環境}\\
+	\textbf{(2) Co-I's research environments}\\
+%	天体観測用の広視野の望遠鏡はあるので、それを携えて地球周回軌道に行けば、
+%	象の卵の探索はできる。
+%	また、季節によらず約45分観測しては約45分寝られるので、
+%	実質ほぼ24時間体制で探索を続けられる。
+%	ただし、暗いと目が覚め、明るいと眠くなる長年の習慣を直す必要はある。
 
 %end 基盤S研究分担者の研究遂行能力及び研究環境 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 %begin 研究業績リスト ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
-	\begin{enumerate}
-		\paper{Supernova detection with human neural network}
-			{\me}{Astrophysics}{1234}{5678}{2019}
-			\label{pub:supernova}	% \labelをつければ、番号を引用できます。
-			
-		% 下のように書いてもいいけど、めんどくさいし、表示の仕方を変えようとしたら大変。
-		\item \label{pub:share} ``象の卵の抱卵の分担'',
-				\me, 
-				\underline{皇帝ペンギン} {\it et al.},
-				J.\ Eggs {\bf 123}, 456 (2018).
-					
-	\end{enumerate}
+%	\begin{enumerate}
+%		\paper{Supernova detection with human neural network}
+%			{\me}{Astrophysics}{1234}{5678}{2019}
+%			\label{pub:supernova}	% \labelをつければ、番号を引用できます。
+%			
+%		% 下のように書いてもいいけど、めんどくさいし、表示の仕方を変えようとしたら大変。
+%		\item \label{pub:share} ``象の卵の抱卵の分担'',
+%				\me, 
+%				\underline{皇帝ペンギン} {\it et al.},
+%				J.\ Eggs {\bf 123}, 456 (2018).
+%					
+%	\end{enumerate}
 %end 研究業績リスト ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 
 \input{pieces/p06_abilities_buntansha_01}
