--- a/kakenhiLaTeX/2021_fall/kiban_s_utf_single/daihyo_info.tex
+++ b/kakenhiLaTeX/2021_fall/kiban_s_utf_single/daihyo_info.tex
@@ -13,61 +13,65 @@
 \renewcommand{\研究者生年月日の月}{2}
 \renewcommand{\研究者生年月日の日}{29}
 \renewcommand{\研究者年齢}{139}
-\renewcommand{\研究者所属機関部局職}{\small{逢坂大学・原始殻研究所・名誉教授}}	% use \tiny if necessary
+\renewcommand{\研究者所属機関部局職}{\small{逢坂大学\\ 原始殻研究所\\ 名誉教授}}	% use \tiny if necessary
 \renewcommand{\研究者学位}{理学博士}
 % end 研究者情報　＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 
 \input{pieces/s14_pub_S_picture} % pieces
 
+\vspace*{-1.4cm}
 %begin 基盤S研究代表者の研究遂行能力及び研究環境 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 	\noindent
-	\textbf{（１）研究代表者のこれまでの研究活動}\\
+%	\textbf{（１）研究代表者のこれまでの研究活動}\\
+	\textbf{(1) PI's hitherto research activities}\\
 \PapersInstructions	% <-- 研究業績留意事項。これは消すか、コメントアウトしてください。
 
-	応募者は過去20年間、７つの海を隅から隅まで航海し、
-	浅瀬から深海まで潜り、文字通り東西南北上下の３次元で
-	シロナガスクジラの卵の探索を行ってきた(業績\ref{pub:whale})。
-	シロナガスクジラに飲み込まれそうになったり、海賊に捕まるなどの危険な目にも
-	あったが、それにもめげず、研究を遂行してきた強靭な能力を有する。
-\\
+%	応募者は過去20年間、７つの海を隅から隅まで航海し、
+%	浅瀬から深海まで潜り、文字通り東西南北上下の３次元で
+%	シロナガスクジラの卵の探索を行ってきた(業績\ref{pub:whale})。
+%	シロナガスクジラに飲み込まれそうになったり、海賊に捕まるなどの危険な目にも
+%	あったが、それにもめげず、研究を遂行してきた強靭な能力を有する。
+%\\
 
 	\noindent
-	\textbf{（２）研究代表者の研究環境}\\
-	シロナガスクジラの卵を探すために用いていたソナーと双眼鏡、及び
-	シロナガスクジラの卵を引き上げるために用意していた大きな網は、
-	そのまま使える。
-\\
+%	\textbf{（２）研究代表者の研究環境}\\
+	\textbf{(2) PI's research environments}\\
+%	シロナガスクジラの卵を探すために用いていたソナーと双眼鏡、及び
+%	シロナガスクジラの卵を引き上げるために用意していた大きな網は、
+%	そのまま使える。
+%\\
 
 	\noindent
-	\textbf{（３）研究組織全体の研究環境}\\
+%	\textbf{（３）研究組織全体の研究環境}\\
+	\textbf{(3) Research environments surrounding whole project members}\\
 \JSPSInstructionsB	% <-- 留意事項。これは消すか、コメントアウトしてください。
-	常識にとらわれない研究代表者のほかに、
-	藁の山の中の針を見つけるために超強磁場発生装置を持つ研究者、
-	超新星探索のために皿のような目を持つ研究者、
-	熟練の象使いなどが集まっているため、
-	人材、装置ともに研究環境は抜群である。
+%	常識にとらわれない研究代表者のほかに、
+%	藁の山の中の針を見つけるために超強磁場発生装置を持つ研究者、
+%	超新星探索のために皿のような目を持つ研究者、
+%	熟練の象使いなどが集まっているため、
+%	人材、装置ともに研究環境は抜群である。
 %end 基盤S研究代表者の研究遂行能力及び研究環境 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 %begin 研究業績リスト ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
-	\begin{enumerate}
-		\paper{Search for whale eggs}{\yukawa\ \etal}{Rev.\ Oceanic Mysteries}{888}{99}{2017}
-			\label{pub:whale}
-				
-		\paper{Theory of Elephant Eggs}{\yukawa, Kara Juzo \etal}{\prl}{800}{800-804}{2005}
-			\label{pub:theoegg}
-				
-		\paper{仔象は死んだ}{Kobo Abe}{安部公房全集}{26}{100-200}{2004}
-		
-		\paper{The Elephant's Child (象の鼻はなぜ長い)}{R.~Kipling}{Nature}{999}{777-799}{2003}
-
-		\paper{You can't Lay an Egg If You're an Elephant}{F.~Ehrlich}
-			{JofUR\\({\tt www.universalrejection.org})}{{\bf N/A}}{2002}
-		
-		% 下のように書いてもいいけど、めんどくさいし、表示の仕方を変えようとしたら大変。
-		\item ``Egg of Elephant-Bird'', 
-				\underline{A.~Cooper},
-				Nature, {\bf 409}, 704-707 (2001).	% 	
-		\input{jack_pub}	% << only for demonstration. Please delete it or comment it out.
-	\end{enumerate}
+%	\begin{enumerate}
+%		\paper{Search for whale eggs}{\yukawa\ \etal}{Rev.\ Oceanic Mysteries}{888}{99}{2017}
+%			\label{pub:whale}
+%				
+%		\paper{Theory of Elephant Eggs}{\yukawa, Kara Juzo \etal}{\prl}{800}{800-804}{2005}
+%			\label{pub:theoegg}
+%				
+%		\paper{仔象は死んだ}{Kobo Abe}{安部公房全集}{26}{100-200}{2004}
+%		
+%		\paper{The Elephant's Child (象の鼻はなぜ長い)}{R.~Kipling}{Nature}{999}{777-799}{2003}
+%
+%		\paper{You can't Lay an Egg If You're an Elephant}{F.~Ehrlich}
+%			{JofUR\\({\tt www.universalrejection.org})}{{\bf N/A}}{2002}
+%		
+%		% 下のように書いてもいいけど、めんどくさいし、表示の仕方を変えようとしたら大変。
+%		\item ``Egg of Elephant-Bird'', 
+%				\underline{A.~Cooper},
+%				Nature, {\bf 409}, 704-707 (2001).	% 	
+%		\input{jack_pub}	% << only for demonstration. Please delete it or comment it out.
+%	\end{enumerate}
 %end 研究業績リスト ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 
 \input{pieces/p05_abilities_daihyo_01}
