--- a/kakenhiLaTeX/2021_fall/kiban_s_utf_single/pieces/form04_kiban_s_header.tex
+++ b/kakenhiLaTeX/2021_fall/kiban_s_utf_single/pieces/form04_kiban_s_header.tex
@@ -5,10 +5,10 @@
 
 % ===== Global definitions for the Kakenhi form ======================
 %　基本情報
-\newcommand{\様式}{様式S−１１}
-\newcommand{\研究種目}{基盤研究}
+\newcommand{\様式}{Form S-11:}
+\newcommand{\研究種目}{Scientific Research}
 \newcommand{\研究種目後半}{}
-\newcommand{\研究種別}{（S）}
+\newcommand{\研究種別}{ (S)}
 \newcommand{\研究種目header}{\研究種目\研究種別\研究種目後半}
 
 \newcommand{\KLMainFile}{kiban\_s.tex}
@@ -17,14 +17,14 @@
 % ===== Headers =====================================
 \fancypagestyle{kiban-s-pub-subject-header}{%
 	\fancyhf{}
-	\fancyhead[L]{\framebox{\headerfont　研究代表者・研究分担者ごとに研究者調書を作成・添付　}\\}
-	\fancyhead[R]{\headerfont\textbf{\研究種目\研究種別\ ９−（\KLJInt{\thepage}）\\}}
+	\fancyhead[L]{\framebox{\headerfont\parbox{0.65\textwidth}{To be filled in and attached to the Research Proposal Document for\\ each Principal Investigator (PI) and Co-Investigator(s) (Co-I(s))}}\\}
+	\fancyhead[R]{\headerfont\textbf{\研究種目\研究種別\ 9-(\thepage)\\}}
 }
 
 \fancypagestyle{kiban-s-pub-header}{%
 	\fancyhf{}
-	\fancyhead[L]{\headerfont\textbf{【研究者調書（研究代表者）（つづき）】}}
-	\fancyhead[R]{\headerfont\textbf{\研究種目\研究種別\ ９−（\KLJInt{\thepage}）\\}}
+	\fancyhead[L]{\headerfont\textbf{[4. Proposal of the Researcher (PI) (continued from the previous page)]}}
+	\fancyhead[R]{\headerfont\textbf{\研究種目\研究種別\ 9-(\thepage)\\}}
 }
 
 %==== specific commands for kiban_s ================
