--- a/kakenhiLaTeX/2021_fall/kiban_s_utf_single/pieces/inst_kiban_s.tex
+++ b/kakenhiLaTeX/2021_fall/kiban_s_utf_single/pieces/inst_kiban_s.tex
@@ -9,8 +9,7 @@
 
 	\noindent
 	\KLInstLine{2}
-　　１．基盤研究（Ｓ）は審査区分表の大区分により、広い分野の委員構成で多角的視点から総合\\
-　　　　審査が行われることに留意の上、研究計画調書を作成すること。\\
+	1. Proposals submitted to the research category Scientific Research (S) will be reviewed in the pertaining Broad Section of the Review Section Table. The proposal document should be prepared with consideration that it will be conducted by Comprehensive Review from diverse viewpoints by a review committee consisting of reviewers with different backgrounds.
 
 	\noindent
 	\KLInstLine{3}
@@ -19,8 +18,8 @@
 
 \newcommand{\JSPSInstructionsB}{%
 	\KLInstWOGeneral{%
-　　※　研究組織が研究代表者のみで構成される場合には、「（３）研究組織全体の研究環\\
-　　　　境」の記述は不要です。\\
+　　* In case the whole project members consists of a sole PI, no need to write in the (3) Research
+　　environments surrounding whole project members.\\
 　　\DeleteInstructions{JSPSInstructionsB}
 	}
 }
