--- a/kakenhiLaTeX/2021_fall/tokusui-2_utf_multi/tokusui-2_02_importance.tex
+++ b/kakenhiLaTeX/2021_fall/tokusui-2_utf_multi/tokusui-2_02_importance.tex
@@ -1,17 +1,18 @@
 %#Split: 02_importance  
 %#PieceName: p02_importance
 \input{pieces/p02_importance_00}
-\section{特別推進研究としての意義}
+%\section{特別推進研究としての意義}
+\section{Significance as Specially Promoted Research}
+\vspace*{-0.9cm}
 %　　　　＜＜最大　7ページ＞＞
 
 %s04_importance.tex
 %begin 期待される研究成果と学術上の意義とインパクト ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
-	象の卵を発見し、その構造を解明する。
-	この発見により、哺乳類は卵を産まないという学術の世界の
-	「常識の殻」を文字通り打ち破ることができる。
-	また、他分野の研究の場においても、古くからの「常識の殻」を
-	打ち砕くきっかけとなり、科学全体が大きく前進するきっかけとなる。
+%	象の卵を発見し、その構造を解明する。
+%	この発見により、哺乳類は卵を産まないという学術の世界の
+%	「常識の殻」を文字通り打ち破ることができる。
+%	また、他分野の研究の場においても、古くからの「常識の殻」を
+%	打ち砕くきっかけとなり、科学全体が大きく前進するきっかけとなる。
 %end 期待される研究成果と学術上の意義とインパクト ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 
 \input{pieces/p02_importance_01}
-
