--- a/kakenhiLaTeX/2021_fall/tokusui-2_utf_single/en_tokusui-2.tex
+++ b/kakenhiLaTeX/2021_fall/tokusui-2_utf_single/en_tokusui-2.tex
@@ -1,5 +1,8 @@
 %\documentclass[11pt,a4paper,uplatex,dvipdfmx]{ujarticle} 		% for uplatex
-\documentclass[11pt,a4j,dvipdfmx]{jarticle} 					% for platex
+\documentclass[10pt,a4j,dvipdfmx]{jarticle} 					% for platex
+\usepackage{newtxtext,newtxmath} % Times New Roman
+\usepackage{wasysym}
+\renewcommand\refname{\textbf{References}}
 \input{pieces/form00_header} % pieces
 \input{pieces/kakenhi7} % pieces
 \input{pieces/form01_header} % pieces
@@ -67,40 +70,44 @@
 %#Split: 01_purpose_background  
 %#PieceName: p01_purpose_background
 \input{pieces/p01_purpose_background_00}
-\section{研究目的、背景など}
+%\section{研究目的、背景など}
+\section{Research Objectives, Background of the Research Project, etc.}
+\vspace*{-0.8cm}
 %　　　　＜＜最大　7ページ＞＞
 
 %s02_purpose_baclground_tokusui-2.tex
 \noindent
-\mbox{\textbf{（概要）}}\\
+%\mbox{\textbf{（概要）}}\\
+\mbox{\textbf{[SUMMARY]}}\\
 %		＜＜１０行程度＞＞
 %begin 研究目的や背景などの概要 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
-	象の卵の研究の目的は．．．	
-	象の卵の研究計画と方法は．．．
+%	象の卵の研究の目的は．．．	
+%	象の卵の研究計画と方法は．．．
 %end 研究目的や背景などの概要 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 
 \noindent
 \rule{\linewidth}{1pt}\\
 \noindent
-\mbox{\textbf{（本文）}}
+%\mbox{\textbf{（本文）}}
+\mbox{\textbf{[MAIN TEXT]}}
 %begin 研究目的や背景など ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 \JSPSInstructions	% <-- 留意事項。これは消すか、コメントアウトしてください。
 
-\textbf{\\　　　　　＊＊＊　以下は、あくまで例です。真似しないでください。　＊＊＊\\
-　　　　　＊＊＊　本文はもちろん、節の切り方や論理の組み方は　　　＊＊＊\\
-　　　　　＊＊＊　ご自分の気に入ったスタイルで書いてください。　　＊＊＊}
-
-	 象の卵の研究目的は．．．
-
-	唯一無二。
-
-\input{blahblah}
-\input{blahblah}
-
-	\vspace{1cm}
-	\begin{thebibliography}{99}
-		\bibitem{teramura} 寺村輝夫、「ぼくは王様 - ぞうのたまごのたまごやき」.
-	\end{thebibliography}
+%\textbf{\\　　　　　＊＊＊　以下は、あくまで例です。真似しないでください。　＊＊＊\\
+%　　　　　＊＊＊　本文はもちろん、節の切り方や論理の組み方は　　　＊＊＊\\
+%　　　　　＊＊＊　ご自分の気に入ったスタイルで書いてください。　　＊＊＊}
+%
+%	 象の卵の研究目的は．．．
+%
+%	唯一無二。
+%
+%\input{blahblah}
+%\input{blahblah}
+%
+%	\vspace{1cm}
+%	\begin{thebibliography}{99}
+%		\bibitem{teramura} 寺村輝夫、「ぼくは王様 - ぞうのたまごのたまごやき」.
+%	\end{thebibliography}
 %end 研究目的や背景など ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 %====================================
 
@@ -109,16 +116,18 @@
 %#Split: 02_importance  
 %#PieceName: p02_importance
 \input{pieces/p02_importance_00}
-\section{特別推進研究としての意義}
+%\section{特別推進研究としての意義}
+\section{Significance as Specially Promoted Research}
+\vspace*{-0.9cm}
 %　　　　＜＜最大　7ページ＞＞
 
 %s04_importance.tex
 %begin 期待される研究成果と学術上の意義とインパクト ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
-	象の卵を発見し、その構造を解明する。
-	この発見により、哺乳類は卵を産まないという学術の世界の
-	「常識の殻」を文字通り打ち破ることができる。
-	また、他分野の研究の場においても、古くからの「常識の殻」を
-	打ち砕くきっかけとなり、科学全体が大きく前進するきっかけとなる。
+%	象の卵を発見し、その構造を解明する。
+%	この発見により、哺乳類は卵を産まないという学術の世界の
+%	「常識の殻」を文字通り打ち破ることができる。
+%	また、他分野の研究の場においても、古くからの「常識の殻」を
+%	打ち砕くきっかけとなり、科学全体が大きく前進するきっかけとなる。
 %end 期待される研究成果と学術上の意義とインパクト ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 
 \input{pieces/p02_importance_01}
@@ -126,20 +135,22 @@
 %#Split: 03_plan  
 %#PieceName: p03_plan
 \input{pieces/p03_plan_00}
-\section{研究計画・方法}
+%\section{研究計画・方法}
+\section{Research Plan and Methods}
+\vspace*{0.5cm}
 %　　　　＜＜最大　7ページ＞＞
 
 %s08_plan_tokusui
 %begin 研究計画と方法 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
-	象の卵の研究計画は．．．
-
-	準備はしようとしている。
-	多分できると思う。
-
-	研究代表者と研究分担者の役割分担は．．．
-
-	\input{blahblah}  % << only for demonstration. Please delete it or comment it out.
-	\input{blahblah}  % << only for demonstration. Please delete it or comment it out.
+%	象の卵の研究計画は．．．
+%
+%	準備はしようとしている。
+%	多分できると思う。
+%
+%	研究代表者と研究分担者の役割分担は．．．
+%
+%	\input{blahblah}  % << only for demonstration. Please delete it or comment it out.
+%	\input{blahblah}  % << only for demonstration. Please delete it or comment it out.
 		
 %end 研究計画と方法 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 
@@ -148,16 +159,18 @@
 %#Split: 04_competence  
 %#PieceName: p04_competence
 \input{pieces/p04_competence_00}
-\section{応募者の研究遂行能力と研究環境}
+%\section{応募者の研究遂行能力と研究環境}
+\section{Applicant's Ability to Conduct the Research and the Research Environment}
+\vspace*{-0.5cm}
 %　　　　＜＜最大　7ページ＞＞
 
 % s13_competence_tokusui
 %begin 特推研究代表者の研究遂行能力と研究実績 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
-	応募者は過去20年間、７つの海を隅から隅まで航海し、
-	浅瀬から深海まで潜り、文字通り東西南北上下の３次元で
-	シロナガスクジラの卵の探索を行ってきた(業績\ref{pub:whale})。
-	シロナガスクジラに飲み込まれそうになったり、海賊に捕まるなどの危険な目にも
-	あったが、それにもめげず、研究を遂行してきた強靭な能力を有する。
+%	応募者は過去20年間、７つの海を隅から隅まで航海し、
+%	浅瀬から深海まで潜り、文字通り東西南北上下の３次元で
+%	シロナガスクジラの卵の探索を行ってきた(業績\ref{pub:whale})。
+%	シロナガスクジラに飲み込まれそうになったり、海賊に捕まるなどの危険な目にも
+%	あったが、それにもめげず、研究を遂行してきた強靭な能力を有する。
 
 \PapersInstructions	% <-- 研究業績留意事項。これは消すか、コメントアウトしてください。
 %end 特推研究代表者の研究遂行能力と研究実績 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
