--- a/kakenhiLaTeX/2021_fall/tokusui-3_utf_multi/tokusui-3_11_final_year.tex
+++ b/kakenhiLaTeX/2021_fall/tokusui-3_utf_multi/tokusui-3_11_final_year.tex
@@ -1,7 +1,8 @@
 %#Split: 11_final_year  
 %#PieceName: p11_final_year
 \input{pieces/p11_final_year_00}
-\section{研究計画最終年度前年度応募を行う場合の記述事項 }
+%\section{研究計画最終年度前年度応募を行う場合の記述事項 }
+\section{Items to be Entered When New Application is Made in the Fiscal Year Previous to the Final Year of the Research Period of an On-Going KAKENHI Project}
 %　　　　＜＜最大　1ページ＞＞
 
 %s04_prep_finalyear
@@ -15,17 +16,18 @@
 \input{pieces/p11_final_year_01}
 
 \noindent
-\textbf{当初研究計画及び研究成果}\\
+%\textbf{当初研究計画及び研究成果}\\
+\textbf{The original plan at the time of application/adoption and the research accomplishment of the ongoing project.}\\
 %begin 研究計画最終年度の応募の計画と成果 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
-	研究課題の通り、シロナガスクジラの卵は見つけられなかった。
+研究課題の通り、シロナガスクジラの卵は見つけられなかった。
 %end 研究計画最終年度の応募の計画と成果 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 \\
 
 \noindent
-\textbf{前年度応募する理由}\\
+%\textbf{前年度応募する理由}\\
+\textbf{The reason for submission of this new proposal.}\\
 %begin 研究計画最終年度の応募の理由 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
-	さっさと次の研究に移りたいので。
+%	さっさと次の研究に移りたいので。
 %end 研究計画最終年度の応募の理由 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 
 \input{pieces/p11_final_year_02}
-
