--- a/kakenhiLaTeX/2021_fall/tokusui-3_utf_multi/tokusui-3_12_plan.tex
+++ b/kakenhiLaTeX/2021_fall/tokusui-3_utf_multi/tokusui-3_12_plan.tex
@@ -1,17 +1,17 @@
 %#Split: 12_plan  
 %#PieceName: p12_plan
 \input{pieces/p12_plan_00}
-\section{海外の研究者に審査意見書を求めることが適当でない場合、その理由 }
+%\section{海外の研究者に審査意見書を求めることが適当でない場合、その理由 }
+\section{Reason(s) Why Comments by an Overseas Researcher is not Appropriate}
 %　　　　＜＜最大　1ページ＞＞
 
 %s16_why_no_foreign_reviewers
 %begin 海外の研究者による審査が適当でない理由 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
-	象の卵の研究はあまりに先鋭的であるため、
-	象が多く生息するアフリカやインドを過去に植民地としていた国の審査員が
-	本研究の審査をした場合、
-	旧植民地とのつながりを生かして先に卵を発見されてしまう
-	可能性がある。
+%	象の卵の研究はあまりに先鋭的であるため、
+%	象が多く生息するアフリカやインドを過去に植民地としていた国の審査員が
+%	本研究の審査をした場合、
+%	旧植民地とのつながりを生かして先に卵を発見されてしまう
+%	可能性がある。
 %end 海外の研究者による審査が適当でない理由 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 
 \input{pieces/p12_plan_01}
-
