--- a/kakenhiLaTeX/2021_fall/tokusui-2_utf_multi/tokusui-2_01_purpose_background.tex
+++ b/kakenhiLaTeX/2021_fall/tokusui-2_utf_multi/tokusui-2_01_purpose_background.tex
@@ -1,42 +1,45 @@
 %#Split: 01_purpose_background  
 %#PieceName: p01_purpose_background
 \input{pieces/p01_purpose_background_00}
-\section{研究目的、背景など}
+%\section{研究目的、背景など}
+\section{Research Objectives, Background of the Research Project, etc.}
+\vspace*{-0.8cm}
 %　　　　＜＜最大　7ページ＞＞
 
 %s02_purpose_baclground_tokusui-2.tex
 \noindent
-\mbox{\textbf{（概要）}}\\
+%\mbox{\textbf{（概要）}}\\
+\mbox{\textbf{[SUMMARY]}}\\
 %		＜＜１０行程度＞＞
 %begin 研究目的や背景などの概要 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
-	象の卵の研究の目的は．．．	
-	象の卵の研究計画と方法は．．．
+%	象の卵の研究の目的は．．．	
+%	象の卵の研究計画と方法は．．．
 %end 研究目的や背景などの概要 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 
 \noindent
 \rule{\linewidth}{1pt}\\
 \noindent
-\mbox{\textbf{（本文）}}
+%\mbox{\textbf{（本文）}}
+\mbox{\textbf{[MAIN TEXT]}}
 %begin 研究目的や背景など ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 \JSPSInstructions	% <-- 留意事項。これは消すか、コメントアウトしてください。
 
-\textbf{\\　　　　　＊＊＊　以下は、あくまで例です。真似しないでください。　＊＊＊\\
-　　　　　＊＊＊　本文はもちろん、節の切り方や論理の組み方は　　　＊＊＊\\
-　　　　　＊＊＊　ご自分の気に入ったスタイルで書いてください。　　＊＊＊}
-
-	 象の卵の研究目的は．．．
-
-	唯一無二。
-
-\input{blahblah}
-\input{blahblah}
-
-	\vspace{1cm}
-	\begin{thebibliography}{99}
-		\bibitem{teramura} 寺村輝夫、「ぼくは王様 - ぞうのたまごのたまごやき」.
-	\end{thebibliography}
+%\textbf{\\　　　　　＊＊＊　以下は、あくまで例です。真似しないでください。　＊＊＊\\
+%　　　　　＊＊＊　本文はもちろん、節の切り方や論理の組み方は　　　＊＊＊\\
+%　　　　　＊＊＊　ご自分の気に入ったスタイルで書いてください。　　＊＊＊}
+%
+%	 象の卵の研究目的は．．．
+%
+%	唯一無二。
+%
+%\input{blahblah}
+%\input{blahblah}
+%
+%	\vspace{1cm}
+%	\begin{thebibliography}{99}
+%		\bibitem{teramura} 寺村輝夫、「ぼくは王様 - ぞうのたまごのたまごやき」.
+%	\end{thebibliography}
 %end 研究目的や背景など ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 %====================================
 
 \input{pieces/p01_purpose_background_01}
-
