--- a/kakenhiLaTeX/2021_fall/tokusui-2_utf_single/pieces/form04_tokusui-2_header.tex
+++ b/kakenhiLaTeX/2021_fall/tokusui-2_utf_single/pieces/form04_tokusui-2_header.tex
@@ -17,29 +17,29 @@
 % ===== Headers =====================================
 \fancypagestyle{tokusui-2-1-p1-header}{%
 	\fancyhf{}
-	\fancyhead[L]{\hspace{-37pt}\headerfont{様式S−１（２）研究計画調書（添付ファイル項目）}\\
+	\fancyhead[L]{\hspace{-37pt}\headerfont{Form S-1 (2): Research Proposal Document (forms to be uploaded)}\\
 				\rule{0pt}{0pt}\\}
-	\fancyhead[R]{\headerfont{\textbf{特別推進研究２−１− ( \thepage\ )}\\}}
+	\fancyhead[R]{\headerfont{\textbf{Specially Promoted Research 2-1-( \thepage\ )}\\}}
 }
 
 \fancypagestyle{tokusui-2-1-header}{%
 	\fancyhf{}
-	\fancyhead[R]{\headerfont{\textbf{特別推進研究２−１− ( \thepage\ )}\\}}
+	\fancyhead[R]{\headerfont{\textbf{Specially Promoted Research 2-1-( \thepage\ )}\\}}
 }
 
 \fancypagestyle{tokusui-2-2-header}{%
 	\fancyhf{}
-	\fancyhead[R]{\headerfont{\textbf{特別推進研究２−２− ( \thepage\ )}\\}}
+	\fancyhead[R]{\headerfont{\textbf{Specially Promoted Research 2-2-( \thepage\ )}\\}}
 }
 
 \fancypagestyle{tokusui-2-3-header}{%
 	\fancyhf{}
-	\fancyhead[R]{\headerfont{\textbf{特別推進研究２−３− ( \thepage\ )}\\}}
+	\fancyhead[R]{\headerfont{\textbf{Specially Promoted Research 2-3-( \thepage\ )}\\}}
 }
 
 \fancypagestyle{tokusui-2-4-header}{%
 	\fancyhf{}
-	\fancyhead[R]{\headerfont{\textbf{特別推進研究２−４− ( \thepage\ )}\\}}
+	\fancyhead[R]{\headerfont{\textbf{Specially Promoted Research 2-4-( \thepage\ )}\\}}
 }
 
 %==========================================================
