--- a/kakenhiLaTeX/2021_fall/tokusui-2_utf_single/pieces/inst_tokusui-2.tex
+++ b/kakenhiLaTeX/2021_fall/tokusui-2_utf_single/pieces/inst_tokusui-2.tex
@@ -5,8 +5,7 @@
 	\KLInstructionTitle
 %	\DeleteInstructions{JSPSInstructions}\\
 	\KLInstLine{1}
-　　１． 特別推進研究は人文社会・理工・生物の「系」の区分により、広い分野の委員構成\\
-　　　　で多角的視点から審査が行われることに留意の上、研究計画調書を作成すること。\\
+1. Proposals submitted to the research category Specially Promoted Research will be reviewed in the Section ``Categories'' of Humanities and Social Sciences, Science and Engineering, and Biological Sciences. The proposal document should be prepared with consideration that it will be reviewed from diverse viewpoints by a review committee consisting of reviewers with different backgrounds.\\
 	\KLInstLine{2}
 	\GeneralInstructions{}{}{}
 }
@@ -14,16 +13,13 @@
 \renewcommand{\PapersInstructions}{%
 	\KLInstLine{}
 \begin{small}%
-　１．研究代表者(研究分担者がいる場合は研究分担者も同様)の研究発表論文や著書、講演等の\\
-　　　研究業績については、本欄ではなく「RECENT RESEARCH ACTIVITIES I (Publications)」\\
-　　　及び「RECENT RESEARCH ACTIVITIES II (Invited Lectures and Talks, Prizes, etc.)」に\\
-　　　主要なものを記載すること。\\
-　２．本欄において、これまでの研究活動で得られた成果を示すに当たり、特定の具体的な研究業績\\
-　　　(論文、著書、産業財産権、招待講演等)を明示する特段の必要がある場合は、当該業績を\\
-　　　同定するに十分な情報を記載すること。\\
-　　　例として、学術論文の場合は論文名、著者名、掲載誌名、巻号や頁等、発表年(西暦)、著書の場合は\\
-　　　その書誌情報、など。\\
-　３．論文は、既に掲載されているもの又は掲載が確定しているものに限って記載すること。\\
+1. As for the research achievements of the Principal Investigator such as research papers, books and lectures, main items of those are given in the columns of ``RECENT RESEARCH
+ACTIVITIES I (Publications)'' and ``RECENT RESEARCH ACTIVITIES II (Invited Lectures and Talks,
+Prizes, etc.)'' rather than using this column. (In case the Co-Investigator(s) are involved, their research achievements are also handled with the same manner.)\\
+2. On showing the achievements from the past research activities in this column, a sufficient
+information to identify the achievement should be given in case there are special needs to show some particular detailed research achievements such as papers, books, patents, invited talks, etc. (e.g., as for a research paper, there should be the title of the paper, authors, name of the journal, the number of the volume and pages, etc., year of publication, the bibliographic information in case of books, and so on.)\\
+3. The research papers that can be cited are only those already published or accepted for
+publication.\\
 　\DeleteInstructions{PapersInstructions}\\
 \end{small}
 　ーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーー\\
