--- a/kakenhiLaTeX/2021_fall/tokusui-3_utf_multi/pieces/form04_tokusui-3_header.tex
+++ b/kakenhiLaTeX/2021_fall/tokusui-3_utf_multi/pieces/form04_tokusui-3_header.tex
@@ -18,19 +18,19 @@
 
 \fancypagestyle{tokusui-2-10-header}{%
 	\fancyhf{}
-	\fancyhead[L]{\hspace{-37pt}\headerfont{様式S−１（３）研究計画調書（添付ファイル項目）}\\
+	\fancyhead[L]{\hspace{-37pt}\headerfont{Form S-1 (3): Research Proposal Document (forms to be uploaded)}\\
 				\rule{0pt}{0pt}\\}
-	\fancyhead[R]{\headerfont{\textbf{特別推進研究２−１０}\\}}
+	\fancyhead[R]{\headerfont{\textbf{Specially Promoted Research 2-10}\\}}
 }
 
 \fancypagestyle{tokusui-2-11-header}{%
 	\fancyhf{}
-	\fancyhead[R]{\headerfont{\textbf{特別推進研究２−１１}\\}}
+	\fancyhead[R]{\headerfont{\textbf{Specially Promoted Research 2-11}\\}}
 }
 
 \fancypagestyle{tokusui-2-12-header}{%
 	\fancyhf{}
-	\fancyhead[R]{\headerfont{\textbf{特別推進研究２−１２}\\}}
+	\fancyhead[R]{\headerfont{\textbf{Specially Promoted Research 2-12}\\}}
 }
 
 %%\newcommand{\KLShumokuFirstPageStyle}[4]{%
